# ComputerGraphics_FinalProject

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Constants.hpp  README.md  main.cpp  main_raytracer.cpp
Documentation/: CMakeLists.txt  Doxyfile  MAIN_PAGE.md
Documentation/style/: doxygen-awesome-sidebar-only.css  doxygen-awesome.css  footer.html  header.html
OGL_Implementation/: Camera.cpp  Camera.hpp  GUI.cpp  GUI.hpp  Input.cpp  Input.hpp  Obj.cpp  Obj.hpp  OpenGL_Timer.cpp  OpenGL_Timer.hpp  Quaternion.cpp  Quaternion.hpp  Window.cpp  Window.hpp
OGL_Implementation/BufferObjects/: BufferObjects.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp
OGL_Implementation/Cubemap/: Brdf_Cubemap.cpp  Brdf_Cubemap.hpp
OGL_Implementation/DebugInfo/: AxisDisplayer.cpp  AxisDisplayer.hpp  FpsCounter.cpp  FpsCounter.hpp  Log.cpp  Log.hpp  Timer.cpp  Timer.hpp
OGL_Implementation/Entity/: AEntity.cpp  AEntity.hpp  AEntity.inl  Entity.cpp  Entity.hpp  Entity_Geometry.cpp  Entity_Geometry.hpp  Entity_Skeleton.cpp  Entity_Skeleton.hpp  Entity_Skeleton.inl
OGL_Implementation/Entity/ParticleSystem/: ParticleSystem.hpp  ParticleSystemGeometry.cpp  ParticleSystemGeometry.hpp  ParticleSystem_Base.cpp  ParticleSystem_Base.hpp  Particle_Base.cpp  Particle_Base.hpp  Particle_Base.inl
OGL_Implementation/EntityAttribute/: EntityAttribute.cpp  EntityAttribute.hpp  EntityAttributeManager.cpp  EntityAttributeManager.hpp  Material.cpp  Material.hpp  Pbr_Material.cpp  Pbr_Material.hpp  ShaderAttribute.cpp  ShaderAttribute.hpp  ShaderAttributeManager.cpp  ShaderAttributeManager.hpp  ShaderAttributeManager.inl  Texture.cpp  Texture.hpp
OGL_Implementation/Image/: Image2D.cpp  Image2D.hpp  Image3D.cpp  Image3D.hpp
OGL_Implementation/Light/: Light.hpp  PointLight.cpp  PointLight.hpp
OGL_Implementation/Mesh/: Mesh.cpp  Mesh.hpp  Mesh_Base.cpp  Mesh_Base.hpp  Mesh_Base.inl  Mesh_Custom.cpp  Mesh_Custom.hpp  Mesh_Geometry.cpp  Mesh_Geometry.hpp  Mesh_Image.cpp  Mesh_Image.hpp  Mesh_Obj.cpp  Mesh_Obj.hpp  Mesh_Sphere.cpp  Mesh_Sphere.hpp
OGL_Implementation/Mesh/Modules/: Mesh_Simplification.cpp  Mesh_Simplification.hpp  Mesh_Subdivision.cpp  Mesh_Subdivision.hpp  Mesh_ThreadPool.cpp  Mesh_ThreadPool.hpp
OGL_Implementation/Rendering/: LightRendering.cpp  LightRendering.hpp  ParticleSystemRendering.cpp  ParticleSystemRendering.hpp  Rendering.cpp  Rendering.hpp  RenderingSettings.hpp  ShadowRendering.cpp  ShadowRendering.hpp
OGL_Implementation/Shader/: Shader.cpp  Shader.hpp  Shader_Base.cpp  Shader_Base.hpp  Shadinclude.hpp
OGL_Implementation/Text/: Font.cpp  Font.hpp  Font_Base.cpp  Font_Base.hpp  Text.cpp  Text.hpp
OGL_Implementation/Texture/: HDRTexture.cpp  HDRTexture.hpp  Texture.cpp  Texture.hpp
OGL_Implementation/Tools/: Tools.cpp  Tools.hpp
Raytracing_Implementation/: bmp.cpp  bmp.h  camera.cpp  camera.h  color.cpp  color.h  light.cpp  light.h  primitive.cpp  primitive.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  scene1.txt  scene2.txt  solver.h  vector3.cpp  vector3.h
docs/html/: _a_entity_8cpp.html  _a_entity_8hpp.html  _a_entity_8hpp_source.html  _a_entity_8inl.html  _axis_displayer_8cpp.html  _axis_displayer_8hpp.html  _axis_displayer_8hpp_source.html  _brdf___cubemap_8cpp.html  _brdf___cubemap_8hpp.html  _brdf___cubemap_8hpp_source.html  _buffer_objects_8hpp.html  _buffer_objects_8hpp_source.html  _camera_8cpp.html  _camera_8hpp.html  _camera_8hpp_source.html  _entity_8cpp.html  _entity_8hpp.html  _entity_8hpp_source.html  _entity___geometry_8cpp.html  _entity___geometry_8hpp.html  _entity___geometry_8hpp_source.html  _entity___skeleton_8cpp.html  _entity___skeleton_8hpp.html  _entity___skeleton_8hpp_source.html  _entity___skeleton_8inl.html  _entity_attribute_8cpp.html  _entity_attribute_8hpp.html  _entity_attribute_8hpp_source.html  _entity_attribute_manager_8hpp.html  _entity_attribute_manager_8hpp_source.html  _font_8cpp.html  _font_8hpp.html  _font_8hpp_source.html  _font___base_8cpp.html  _font___base_8hpp.html  _font___base_8hpp_source.html  _fps_counter_8cpp.html  _fps_counter_8hpp.html  _fps_counter_8hpp_source.html  _g_u_i_8cpp.html  (+292 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+59 more)
lib/: CMakeLists.txt
lib/GLAD/: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  MANIFEST.in  README.md  setup.py
lib/GLAD/glad/: __init__.py  __main__.py  opener.py  parse.py  spec.py  util.py
lib/GLAD/utility/: bump_version.sh  compiletest.sh  download.sh  generateall.sh  updatesub.sh
lib/GLFW/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
lib/GLFW/CMake/: amd64-mingw32msvc.cmake  i586-mingw32msvc.cmake  i686-pc-mingw32.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
lib/GLFW/examples/: CMakeLists.txt  gears.c  offscreen.c  particles.c  sharing.c  simple.c  wave.c
lib/GLFW/src/: CMakeLists.txt  glfw_config.h.in  (+1 more)
lib/ImGui/: CMakeLists.txt  imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
lib/ImGui/include/: imgui.h  imgui_internal.h
lib/SOIL/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt  stb_image_write.cpp  stb_image_write.h
resources/Models/: Patrick.mtl
resources/Shaders/: axisdisplayer.frag.glsl  axisdisplayer.vert.glsl  bezier.frag.glsl  bezier.tcs.glsl  bezier.tes.glsl  bezier.vert.glsl  face.frag.glsl  face.vert.glsl  face2D.frag.glsl  face2D.vert.glsl  light.frag.glsl  light.vert.glsl  particle.frag.glsl  point.frag.glsl  point.vert.glsl  point_shadow_mapping_depth.frag.glsl  shadow_mapping_depth.vert.glsl  snow.frag.glsl  snow.vert.glsl  text2D.frag.glsl  text2D.vert.glsl  text3D.vert.glsl  wireframe.frag.glsl  wireframe.vert.glsl
(+83 files in other folders)
